[project]
name = "kmd-nova-client"
version = "0.1.0"
description = "Unofficial KMD Nova client."
readme = "README.md"
authors = [
    { name = "Martin Androvich", email = "martinandrovich@gmail.com" }
]
requires-python = "~=3.13.0"
dependencies = [
    "bs4>=0.0.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "playwright>=1.52.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
